--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    implementation 'com.google.ar:core:1.30.0'
 
     //Lifecycle
     def lifecycle_version = "2.6.1"
@@ -131,9 +133,45 @@ dependencies {
     testImplementation "com.google.truth:truth:1.1.2"
     testImplementation "org.mockito:mockito-core:3.10.0"
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
 
-    implementation "androidx.activity:activity-ktx:1.7.1"
-    implementation 'androidx.fragment:fragment-ktx:1.5.7'
+    implementation "androidx.room:room-runtime:2.5.1"
+
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+
+    kapt "androidx.room:room-compiler:2.5.1"
+
+    implementation "androidx.room:room-ktx:2.5.1"
+
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+
+    testImplementation "androidx.room:room-testing:2.5.1"
+
+    testImplementation "junit:junit:4.13.2"
+
+    testImplementation "com.google.truth:truth:1.1.2"
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
+
+    testImplementation "org.robolectric:robolectric:4.5.1"
+
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.5"
+
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+
+    androidTestImplementation "com.google.truth:truth:1.1.2"
+
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+
+    androidTestImplementation "androidx.test:rules:1.5.0"
+
+    androidTestImplementation "androidx.test:runner:1.5.2"
+
+    androidTestImplementation "androidx.test:core-ktx:1.5.0"
+
+
+    implementation "androidx.activity:activity-ktx:1.7.2"
+    implementation 'androidx.fragment:fragment-ktx:1.6.0'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
